# production-code-showcase

./: .gitignore  README.md  pyproject.toml
churn_scorer/: api.py  config.py  protocols.py  scorer.py  table_loader.py
churn_scorer/api/: routes.py
churn_scorer/models/: factory.py  model_factory.py  xgboost_model.py
churn_scorer/pipeline/: transformer.py
data/: results.csv  sample_input_for_prediction.csv  sample_train.csv
tests/: test_api.py  test_feature_transformer.py  test_scorer.py  test_xgboost_model.py
tests/data/: test_data_for_prediction.csv
